fix horizontal scroll

--- a/frontend/src/components/InputApiKey/InputApiKey.module.scss
+++ b/frontend/src/components/InputApiKey/InputApiKey.module.scss
@@ -1,5 +1,6 @@
 .inputPanel {
     padding: 0.5rem 1rem;
+    margin-bottom: 1rem;
     height: 2rem;
     display: flex;
     gap: 0.5rem;
